_old-projects/kubernetes/kube-prometheus-stack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-state-ingress
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.local.m1xxos.tech`)
    kind: Rule
    services:
    - name: grafana
      namespace: monitoring
      port: 80
  tls:
    secretName: local-m1xxos-me
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`metrics.local.m1xxos.tech`) || PathPrefix(`/metrics`)
    services:
    - name: prometheus@internal
      kind: TraefikService
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.local.m1xxos.tech`)
    kind: Rule
    services:
    - name: prometheus-prometheus
      namespace: monitoring
      port: 9090
  tls:
    secretName: local-m1xxos-me
